# ethereum-vuln-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
collection/: IMPROVEMENT_LOG.md  README.md  classify_stride_cwe.py  classify_stride_cwe_sdk.py  crawl_cross_client.py  crawl_cve.py  crawl_eth_past_fixes.py  crawl_ghsa_advisories.py  crawl_govulncheck.py  crawl_osv.py  crawl_rustsec.py  crawl_specs_divergence.py  crawl_teku_jira_refs.py  cross_reference.py  detect_silent_fixes.py  enrich_linked_issues.py  estimate_severity.py  extract_nimbus_urgency.py  llm_classify_fixes.py  local_diffs.py  merge_crawl_csvs.py  merge_cve.py  mine_direct_pulls.py  mine_eth_releases.py  mine_stealth_prs.py  run_pipeline.sh  train_silent_fix_classifier.py
data/: BUILD_REPORT.md  ethereum_vulns.csv  ethereum_vulns.parquet  ethereum_vulns.preview.csv  manifest.json  severity_est.csv  silent_fix_llm.csv
docs/: BUILD_REPORT.md  analysis.md  checklist.md  collection.md  critical_high_findings.md  critical_high_findings_ja.md  label_design.md  limitations.md  model_evaluation.md  security_report.md  severity_labeling.md  silent_fix_detection.md  tech_report.md
pipeline/: build_security_dataset.py  enrich_labels.py
pipeline/templates/: README.md.j2
scripts/: make_figures.py
tests/: test_security_dataset.py
