[project]
name = "ethereum-vuln-dataset"
version = "0.1.0"
description = "Curated corpus of past security fixes from the 11 Ethereum clients"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[project.optional-dependencies]
publish = ["huggingface_hub>=0.23", "jinja2>=3.1"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
